--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ nav li a {
 
 header {
   text-align: right;
-  background-image: url("/assets/img/bg-hero.png");
+  background-image: url("./assets/img/bg-hero.png");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -133,6 +133,7 @@ text-align: right;
   margin: 10% 0;
   font-weight: 800;
   font-size: 2em;
+  color: black;
 }
 /* section cuarta */
 
@@ -180,5 +181,5 @@ margin: 10% auto;
 
 footer a{
   text-decoration: none;
-  color: black;
+  color: white;
 }
