--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ nav li a {
 
 header {
   text-align: right;
-  background-image: url("./assets/img/bg-hero.png");
+  background-image: url("../img/bg-hero.png");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
